--- a/Naive Bayes.ipynb
+++ b/Naive Bayes.ipynb
@@ -13,7 +13,7 @@
    "id": "728bd186",
    "metadata": {},
    "source": [
-    "So in a classification pronblem, we consider the features and predict the class of an event.the assumption her is that the probability that the event is in a class based on one feature is independent of the other features. So to get the total probability of an event, we calculate the probability wrt each feature and then multiply the probabilities. "
+    "So in a classification pronblem, we consider the features and predict the class of an event.the assumption here is that the probability that the event is in a class based on one feature is independent of the other features. So to get the total probability of an event, we calculate the probability wrt each feature and then multiply the probabilities. "
    ]
   },
   {
